Lab 8/compiling_error.txt
C:\Users\Randy\Documents\2018-2019\CSCI\Lab 8\DirtyDice.cpp:79:1: error: expected declaration before '}' token
 }
 ^
